[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadast"
version = "0.0.5"
authors = [{ name = "Xianhan Qin", email = "q764579066@gmail.com" }]
description = "A python implement of CadaST"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata>=0.10.9",
    "numpy>=1.23.5",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.0",
    "tqdm>=4.66.5",
]


[project.urls]
Homepage = "https://github.com/Khadaq2001/CadaST"
Issues = "https://github.com/Khadaq2001/CadaST/issues"

[tool.ruff]
line-length = 120
